--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 
 @layer base {
   :root {
-
     --radius: 0.5rem;
 
     --background: 0 0% 100%;
@@ -55,9 +54,9 @@
 
     --chart-4: 43 74% 66%;
 
-    --chart-5: 27 87% 67%}
+    --chart-5: 27 87% 67%;
+  }
   .dark {
-
     --background: 222.2 84% 4.9%;
 
     --foreground: 210 40% 98%;
@@ -104,7 +103,7 @@
 
     --chart-4: 280 65% 60%;
 
-    --chart-5: 340 75% 55%
+    --chart-5: 340 75% 55%;
   }
 }
 
